Added text area inputs and reset option

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -5,7 +5,17 @@
     <title>Gamedev Canvas Workshop</title>
 </head>
 <body>
+<label for="width"> width </label>
 
+<textarea id="width" name="width" rows="1" colrs="5">30</textarea>
+<label for="height"> height </label>
+<textarea id="height" name="height" rows="1" colrs="5">16</textarea>
+<label for="num_bombs"> bombs </label>
+<textarea id="num_bombs" name="num_bombs" rows="1" colrs="8">99</textarea>
+<label for="tile_size"> tile size </label>
+<textarea id="tile_size" name="tile_size" rows="1" colrs="3">50</textarea>
+<button onclick="reset()">reset</button>
+<br>
 <canvas id="myCanvas" width="1920" height="1080" oncontextmenu="return false"></canvas>
 
 <script src="minesweeper.js"></script>
